testdata/fixtures/audit/positive/missing_auth_fastapi_py.py
from fastapi import FastAPI

app = FastAPI()


@app.get("/admin")
def get_admin():
    return {"secret": "admin data"}
